fix: Change margin left

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </video>
       </div>
       <div
-        class="bg-blue-500/85 w-fit p-4 mx-5 lg:px-10 absolute top-40 md:top-96 lg:top-[28rem] space-y-5 rounded-sm lg:py-28"
+        class="bg-blue-500/85 w-fit p-4 mx-5 lg:px-10 absolute top-40 md:top-96 lg:top-[28rem] space-y-5 rounded-sm lg:py-28 lg:ml-12"
       >
         <p class="font-bold text-[2.4rem] lg:text-4xl">
           Keeping AI on the ball
