feat: Add deliver section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
       </div>
     </nav>
     <!-- Highlight section-->
-    <section class="text-3xl text-white mx-5 lg:mx-12 mt-14">
+    <section
+      class="text-3xl text-white mx-5 lg:mx-12 mt-14 md:relative lg:relative lg:bottom-40 md:bottom-40"
+    >
       <p class="font-medium mb-5 lg:mb-7">Highlight</p>
       <div class="grid grid-cols-1 gap-6 md:grid md:grid-cols-3">
         <!-- Highligh 1 -->
@@ -165,6 +167,24 @@
           </p>
         </div>
       </div>
+    </section>
+    <!-- Deliver Section -->
+    <section class="text-white mr-18 relative bottom-10">
+      <div class="bg-[#121a38] pl-10 space-y-8 relative">
+        <p class="text-3xl pt-10">We deliver real value</p>
+        <p class="text-[1.1rem] font-thin pb-28">
+          through our people-centric <br />
+          approach and unique human-AI <br />chemistry
+        </p>
+      </div>
+
+      <iframe
+        class="relative bottom-[21.08rem] left-[26rem]"
+        width="656"
+        height="369"
+        src="https://www.youtube.com/embed/syaXZDpxzs8"
+        title="Capgemini | Make it real."
+      ></iframe>
     </section>
   </body>
 </html>
