fix: Responsiveness for tablets

--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
         </video>
       </div>
       <div
-        class="bg-blue-500/85 w-fit p-4 mx-5 lg:px-10 absolute top-[7.5rem] md:top-64 lg:top-[20rem] space-y-5 rounded-sm lg:py-20 lg:ml-12"
+        class="bg-blue-500/85 w-fit p-4 mx-5 lg:px-10 top-[15rem] absolute top-[7.5rem] md:top-64 lg:top-[20rem] space-y-5 rounded-sm lg:py-20 lg:ml-12"
       >
         <p class="font-bold text-[2.4rem] lg:text-4xl">
           Keeping AI on the ball
         </p>
-        <p class="font-medium text-[1.2rem] lg:text-[1.1rem]">
+        <p class="font-medium text-[1.5rem] lg:text-[1.1rem]">
           Discover how AI is elevating the fan experience for millions
           <br class="hidden md:block lg:block" />
           watching the Ryder Cup
@@ -169,22 +169,32 @@
       </div>
     </section>
     <!-- Deliver Section -->
-    <section class="text-white mr-18 relative bottom-10">
-      <div class="bg-[#121a38] pl-10 space-y-8 relative">
-        <p class="text-3xl pt-10">We deliver real value</p>
-        <p class="text-[1.1rem] font-thin pb-28">
-          through our people-centric <br />
-          approach and unique human-AI <br />chemistry
-        </p>
+    <section
+      class="text-white md:mr-5 md:relative md:bottom-[5rem] lg:mr-18 lg:relative lg:bottom-10"
+    >
+      <div
+        class="mt-13 md:mt-0 lg:mt-0 flex flex-col-reverse md:block lg:block"
+      >
+        <div
+          class="bg-gray-950 py-7 mx-9 px-8 md:px-0 lg:px-0 md:mx-0 lg:mx-0 md:py-0 lg:py-0 md:bg-[#121a38] lg:bg-[#121a38] md:pl-5 lg:pl-10 space-y-4 lg:space-y-8 lg:relative"
+        >
+          <p class="text-2xl lg:text-3xl md:pt-5 lg:pt-10">
+            We deliver real value
+          </p>
+          <p class="text-[1.3rem] lg:text-[1.1rem] font-thin md:pb-10 lg:pb-28">
+            through our people-centric <br class="hidden md:block lg:block" />
+            approach and unique human-AI
+            <br class="hidden md:block lg:block" />chemistry
+          </p>
+        </div>
+        <div>
+          <iframe
+            class="w-[556] h-[300] px-5 md:px-0 lg:px-0 relative md:bottom-[14rem] lg:bottom-[21.08rem] md:w-[27rem] md:h-[15rem] lg:w-[656] lg:h-[369] md:left-[20rem] lg:left-[26rem]"
+            src="https://www.youtube.com/embed/syaXZDpxzs8"
+            title="Capgemini | Make it real."
+          ></iframe>
+        </div>
       </div>
-
-      <iframe
-        class="relative bottom-[21.08rem] left-[26rem]"
-        width="656"
-        height="369"
-        src="https://www.youtube.com/embed/syaXZDpxzs8"
-        title="Capgemini | Make it real."
-      ></iframe>
     </section>
   </body>
 </html>
